<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical"
        tools:context="xyz.marcindobienko.quizapp.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#00796B">

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="7"
                android:gravity="center"
                android:text="@string/main_text"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="3"
                android:src="@drawable/geo" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#009688"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/first_question"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/first_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@null"
                    android:paddingLeft="8dp"
                    android:text="@string/first_answer_f_q" />

                <RadioButton
                    android:id="@+id/correct_first_answer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@null"
                    android:paddingLeft="8dp"
                    android:text="@string/second_answer_f_q" />

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@null"
                    android:paddingLeft="8dp"
                    android:text="@string/third_answer_f_q" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/second_question"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/second_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/correct_second_answer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@null"
                    android:paddingLeft="8dp"
                    android:text="@string/first_answer_s_q" />

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@null"
                    android:paddingLeft="8dp"
                    android:text="@string/second_answer_s_q" />

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@null"
                    android:paddingLeft="8dp"
                    android:text="@string/third_answer_s_q" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/fifth_question"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/third_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@null"
                    android:paddingLeft="8dp"
                    android:text="@string/first_answer_5_q" />

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@null"
                    android:paddingLeft="8dp"
                    android:text="@string/second_answer_5_q" />

                <RadioButton
                    android:id="@+id/correct_third_answer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@null"
                    android:paddingLeft="8dp"
                    android:text="@string/third_answer_5_q" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/third_question"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/first_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_third_question"
                    android:inputType="number"
                    android:maxLength="1" />

                <TextView
                    android:id="@+id/correct_invisible_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/answer_third_question"
                    android:textColor="#D32F2F"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:visibility="invisible" />

            </LinearLayout>


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#80CBC4"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <TextView
                    android:id="@+id/fourth_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="8dp"
                    android:text="@string/fourth_question"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent" />


                <CheckBox
                    android:id="@+id/first_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/fourth_question"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/first_answer_4th_q"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintTop_toBottomOf="@id/fourth_question" />

                <CheckBox
                    android:id="@+id/second_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingRight="32dp"
                    android:text="@string/second_answer_4th_q"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintLeft_toRightOf="@id/first_checkbox"
                    app:layout_constraintTop_toBottomOf="@id/fourth_question" />

                <CheckBox
                    android:id="@+id/third_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:text="@string/third_answer_4th_q"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintLeft_toRightOf="@id/second_checkbox"
                    app:layout_constraintTop_toBottomOf="@id/fourth_question" />

                <CheckBox
                    android:id="@+id/fourth_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/fourth_answer_4th_q"
                    app:layout_constraintTop_toBottomOf="@id/first_checkbox" />

                <CheckBox
                    android:id="@+id/fifth_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:text="@string/fifth_answer_4th_q"
                    app:layout_constraintLeft_toRightOf="@id/fourth_checkbox"
                    app:layout_constraintTop_toBottomOf="@id/first_checkbox" />

                <CheckBox
                    android:id="@+id/sixth_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:text="@string/sixth_answer_4th_q"
                    app:layout_constraintLeft_toRightOf="@id/fifth_checkbox"
                    app:layout_constraintTop_toBottomOf="@id/first_checkbox" />

            </android.support.constraint.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#80CBC4">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/oval_button"
                android:onClick="displayResults"
                android:text="@string/result"
                android:textSize="16sp" />

            <Button
                android:id="@+id/show_good_answers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/oval_button"
                android:onClick="showGoodAnswers"
                android:text="@string/show_good_answers"
                android:textSize="16sp" />

            <Button
                android:id="@+id/reset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/oval_button"
                android:onClick="resetButton"
                android:text="@string/reset"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
